# Kroniax_Cpp

./: .gitignore  CMakeLists.txt  Kroniax.cbp  Kroniax.depend  Kroniax.layout  LICENSE.md  LICENSE.txt  README.md
Kroniax latest build/: Kroniax.cscope_file_list  README.md
Kroniax latest build/config/: options.cfg
Kroniax latest build/include/aw/utilities/: stopwatch.hpp
Kroniax latest build/include/game/: HighscoreBoard.hpp  level.hpp  settings.hpp
Kroniax latest build/levels/Insane/: collidegrid.cfg
Kroniax latest build/levels/Level2/: tileData2.cfg  tilesets.cfg
Kroniax latest build/levels/Level3/: collidegrid.cfg
Kroniax latest build/levels/Level4/: settings.ini  tileData1.cfg
Kroniax latest build/levels/Level5/: tileData2.cfg  tilesets.cfg
Kroniax latest build/levels/Level6/: tileData3.cfg  tilesets.cfg
Kroniax latest build/levels/Level7/: scripts.ini  tileData2.cfg  tilesets.cfg
Kroniax latest build/levels/Level9/: scripts.ini
Kroniax latest build/levels/Test/: collidegrid.cfg  tileData3.cfg
Kroniax latest build/levels/Tutorial/: collidegrid.cfg  tileData1.cfg  tilesets.cfg
Kroniax latest build/levels/Tutorial2/: scripts.ini  tileData3.cfg
Kroniax latest build/levels/Tutorial3/: collidegrid.cfg  settings.ini
Kroniax latest build/src/: main.cpp
Kroniax latest build/src/aw/utilities/: converter.cpp
Kroniax latest build/src/game/: DialogScreen.cpp  level.cpp
Kroniax latest build/src/gui/: GuiController.cpp  Layer.cpp
config/: config Level5 unrar this to unlock lvl5.rar  options.cfg
data/: arcade levellist.cfg  config.cfg
data/levels/: Level1.cfg  test.cfg
data/levels/custom/: Level1.cfg  Level2.cfg  Level3.cfg  Level4.cfg  Level5.cfg  Level6.cfg  Level7.cfg  Level9.cfg
data/levels/official/: Level1.cfg  Level2.cfg  Level3.cfg  Level4.cfg  Level5.cfg  Level6.cfg  Level7.cfg  Level8.cfg  Tutorial1.cfg
data/levels/old levels/: Level1_old.cfg  Level2_old.cfg
data/tilesets/: Unbenannt.xcf  level1.xcf
include/: application.cpp  application.hpp  global.hpp  main.cpp
include/aw/utilities/: Converter.hpp  StopWatch.hpp  converter.hpp
include/game/: CustomMapManager.hpp  DialogScreen.hpp  Game.hpp  HighscoreBoard.hpp  HighscoreUploader.hpp  Level.hpp  Menu.hpp  MenuBackground.hpp  Settings.hpp  Tracer.hpp  game.hpp  highscoreUploader.hpp  level.hpp  menu.hpp  menuBackground.hpp
include/gui/: GuiBaseClass.hpp  GuiController.hpp  GuiLayer.hpp  Layer.hpp  guiBaseClass.cpp  guiBaseClass.hpp  guiController.cpp  guiController.hpp  guiLayer.cpp  guiLayer.hpp
include/messageBus/: messageBus.cpp  messageBus.hpp  receiver.hpp
include/modules/: chatHandler.cpp  chatHandler.hpp  networkHandler.cpp  networkHandler.hpp  settings.cpp  settings.hpp  stateMachine.cpp  stateMachine.hpp  windowHandler.cpp  windowHandler.hpp
include/modules/game/: camera.cpp  camera.hpp  collisionCollum.cpp  collisionCollum.hpp  collisionSystem.cpp  collisionSystem.hpp  countdown.cpp  countdown.hpp  gameTimer.cpp  gameTimer.hpp  mapCollum.cpp  mapCollum.hpp  mapRenderer.cpp  mapRenderer.hpp  player.cpp  player.hpp  playerHUD.cpp  playerHUD.hpp  scriptAction.cpp  scriptAction.hpp  scriptManager.cpp  scriptManager.hpp  timeTabel.hpp  timeTable.cpp  timeTable.hpp
include/modules/states/: game.cpp  game.hpp  intro.cpp  intro.hpp  menu.cpp  menu.hpp  state.cpp  state.hpp
include/sfchat/: sfchat.cpp  sfchat.h
include/utilities/: anyType.hpp  hash.cpp  hash.hpp
levels/Insane/: collidegrid.cfg  settings.cfg  settings.ini  tileData1.cfg  tileData2.cfg  tileData3.cfg  tilesets.cfg
levels/Level1/: collidegrid.cfg  settings.cfg  settings.ini  tileData1.cfg  tileData2.cfg  tileData3.cfg  tilesets.cfg
levels/Level2/: collidegrid.cfg  settings.ini  tileData1.cfg  tileData2.cfg  tileData3.cfg  tilesets.cfg
levels/Level3/: collidegrid.cfg  scripts.ini  settings.cfg  settings.ini  tileData1.cfg  tileData2.cfg  tileData3.cfg  tilesets.cfg
levels/Level4/: collidegrid.cfg  scripts.ini  settings.cfg  tileData1.cfg  tileData2.cfg  tileData3.cfg  tilesets.cfg
levels/Level5/: collidegrid.cfg  scripts.ini  settings.cfg  settings.ini  tileData1.cfg  tileData2.cfg  tileData3.cfg  tilesets.cfg
levels/Level6/: collidegrid.cfg  scripts.ini  settings.cfg  settings.ini  tileData1.cfg  tileData2.cfg  tileData3.cfg  tilesets.cfg
levels/Level7/: collidegrid.cfg  settings.cfg  settings.ini  tileData1.cfg  tileData2.cfg  tileData3.cfg  tilesets.cfg
levels/Level8/: collidegrid.cfg  scripts.ini  settings.cfg  settings.ini  tileData1.cfg  tileData2.cfg  tileData3.cfg  tilesets.cfg
levels/Level9/: collidegrid.cfg  settings.cfg  settings.ini  tileData1.cfg  tileData2.cfg  tileData3.cfg  tilesets.cfg
levels/Test/: settings.ini  tileData1.cfg  tileData2.cfg  tilesets.cfg
levels/Tutorial/: collidegrid.cfg  scripts.ini  settings.cfg  settings.ini  tileData1.cfg  tileData2.cfg  tileData3.cfg  tilesets.cfg
levels/Tutorial2/: collidegrid.cfg  settings.cfg  tileData1.cfg  tileData2.cfg  tileData3.cfg  tilesets.cfg
levels/Tutorial3/: collidegrid.cfg  scripts.ini  settings.cfg  tileData1.cfg  tileData2.cfg  tileData3.cfg  tilesets.cfg
res/: resource.rc
src/: Main.cpp
src/aw/utilities/: Converter.cpp  StopWatch.cpp  stopwatch.cpp
src/game/: CustomMapManager.cpp  DialogScreen.cpp  Game.cpp  HighscoreBoard.cpp  HighscoreUploader.cpp  Level.cpp  Menu.cpp  MenuBackground.cpp  Settings.cpp  Tracer.cpp  game.cpp  highscoreUploader.cpp  level.cpp  menu.cpp  menuBackground.cpp  settings.cpp
src/gui/: GuiBaseClass.cpp  GuiController.cpp  GuiLayer.cpp  Layer.cpp
tools/: kroniax-launcher.sh  linux-release.sh  make-linux-release.sh
